# deep-learning-from-scratch-3

./: .gitignore  Makefile  README.md  poetry.mk  pyproject.toml
.github/workflows/: test.yaml
steps/: step01.py  step02.py  step03.py  step04.py  step05.py  step07.py  step08.py  step09.py
tests/: test_step02.py  test_step03.py  test_step04.py  test_step05.py  test_step07.py  test_step08.py  test_step09.py  test_steps01.py  test_steps02.py
